2007-04-21  Brandon Hale  <brandon@brandonhale.us>
	
	* configure.ac, liblast-exit/player.cs:
	Patch from Baris on #430751.
	Improved handling of buffering, requires gstreamer 0.10.11 or better

2007-04-20  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.ac: added "ca" to ALL_LINUAS.

2007-04-14  Brandon Hale  <brandon@brandonhale.us>

	* dbus-sharp/:
	Update to dbus-sharp 0.4.2

	* src/TagView.cs, src/TagSelector.cs, po/POTFILES.in:
	One more l10n patch from Lukasz on bug #428933.

2007-04-12  Brandon Hale  <brandon@brandonhale.us>
	
	Reduce libsexy requirement to 0.1.5 for SLED.

2007-04-10  Brandon Hale  <brandon@brandonhale.us>

	* src/PlayerWindow.cs:
	Calling Hate! skips the track again.

2007-04-09  Baris Cicek <baris@teamforce.name.tr>

	* src/PlayerWindow.cs: Love! should call unLoveTrack, 
	it was calling LoveTrack by mistake.

2007-04-09  Baris Cicek <baris@teamforce.name.tr>

	* configure.ac: Added tr to ALL_LINGUAS

2007-04-8  Brandon Hale  <brandon@brandonhale.us>

	Patch from Baris on bug #427691.
	Ports old HTTP access to audioscrobbler webservice with
	much cleaner XmlRpcCS. 
	As a side effect, this fixes tagging, bug #41143.

2007-04-8  Brandon Hale  <brandon@brandonhale.us>

	Patch from Baris to fix bug #35012.
	Better handling of errors on finding stations.

2007-04-07  Baris Cicek <baris@teamforce.name.tr>

	* src/PlayerWindow.cs, src/FindStation.cs:
	Patch to revert station combo box to previous state on Find Station
	dialog is cancelled. Fixes #352010
	
	* src/FindStation.cs:
	Parsing of 'match' node for similar artists is changed to Decimal
	so that floating point return values won't crash last-exit. 
	Fixes #423667

	* src/FirstRunDialog.cs:
	Making First Run Dialog more sensitive to user, giving feedback
	about username and password entries, also handling of Enter on
	password entry acts as HasDefault. Fixes #427445

	* src/FMConnection.cs:
	Trimming opts in order to prevent extra white spaces. Possibly